# ICR2FFB

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ICR2FFB.vcxproj  ICR2FFB.vcxproj.filters  LICENSE  MinGW.cmake  README.md  Refactoring.md  backupslipangle.txt  clang_format_sources.bat  clang_format_sources.sh  ffb.ini  ffb_setup.cpp  ffb_setup.h  main.cpp  telemetry_reader.cpp  telemetry_reader.h  wstring_helpers.cpp  wstring_helpers.h
calculations/: lateral_load.cpp  lateral_load.h  slip_angle.cpp  slip_angle.h  vehicle_dynamics.cpp  vehicle_dynamics.h
cmake/: MinGW.cmake  RecursiveDirList.cmake
forces/: constant_force.cpp  constant_force.h  damper_effect.cpp  damper_effect.h  spring_effect.cpp  spring_effect.h
forces/backup/: constant_force.cpp  constant_force.h  damper_effect.cpp  damper_effect.h  spring_effect.cpp  spring_effect.h
scripts/: clang_format_sources.bat  clang_format_sources.sh  clang_tidy_parallel.sh  clang_tidy_sources.sh  cppcheck_include.hpp  cppcheck_project.sh  cppcheck_suppressions.txt
src/: constants.h  direct_input.cpp  direct_input.h  ffb_config.cpp  ffb_config.h  ffb_device.cpp  ffb_device.h  ffb_output.cpp  ffb_output.h  ffb_processor.cpp  ffb_processor.h  ffb_setup.cpp  ffb_setup.h  game_version.h  helpers.h  log.cpp  log.h  main.cpp  main.h  project_dependencies.h  telemetry_display.cpp  telemetry_display.h  telemetry_reader.cpp  telemetry_reader.h  timing.cpp  timing.h  version.h  window.cpp  window.h
src/algorithm/: constants.h  ffb_output.cpp  ffb_processor.cpp  ffb_processor.h  game_version.h  telemetry_reader.cpp  telemetry_reader.h
src/algorithm/calculations/: slip_angle.cpp  vehicle_dynamics.cpp
src/algorithm/effects/: constant_force.cpp  constant_force.h  damper_effect.cpp  damper_effect.h  movement_detection.cpp  movement_detection.h  rate_limiter.cpp  rate_limiter.h  spring_effect.cpp  spring_effect.h
src/algorithm/forces/: constant_force.cpp  constant_force.h  damper_effect.cpp  spring_effect.h
src/algorithm/input/: game_detect.cpp  game_detect.h  game_version.cpp  game_version.h  telemetry_reader.cpp  telemetry_reader.h
src/algorithm/inputs/: slip_angle.cpp  slip_angle.h  vehicle_dynamics.cpp  vehicle_dynamics.h
src/algorithm/io/input/: telemetry_reader.cpp  telemetry_reader.h
src/algorithm/io/output/: ffb_output.cpp  ffb_output.h
src/algorithm/output/: ffb_output.cpp
src/algorithm/outputs/: constant_force.cpp  constant_force.h  movement_detection.cpp  movement_detection.h  spring_effect.cpp  spring_effect.h
src/algorithm/processing/: constants.h
src/algorithm/processing/dynamics/: lateral_load.cpp  vehicle_dynamics.cpp  vehicle_dynamics.h
src/algorithm/processing/effects/: constant_force.cpp  constant_force.h  damper_effect.cpp  movement_detection.cpp  movement_detection.h  rate_limiter.cpp  sim_state.h  spring_effect.cpp  spring_effect.h
src/calculations/: lateral_load.cpp  lateral_load.h  slip_angle.cpp  slip_angle.h  vehicle_dynamics.cpp  vehicle_dynamics.h
src/forces/: constant_force.cpp  constant_force.h  damper_effect.cpp  damper_effect.h  spring_effect.cpp  spring_effect.h
src/io/config/: ffb_config.cpp  ffb_config.h
src/io/direct_input/: direct_input.cpp  direct_input.h  ffb_device.cpp  ffb_device.h  ffb_effect.cpp  ffb_effect.h  ffb_pedals.cpp  ffb_steering_device.cpp
src/io/direct_input/api/: direct_input.cpp  direct_input.h
src/io/direct_input/app/: ffb_device.cpp  ffb_device.h  ffb_effect.cpp  ffb_effect.h  ffb_pedals.cpp  ffb_pedals.h  ffb_steering_device.cpp  ffb_steering_device.h
src/io/display/: telemetry_display.cpp  telemetry_display.h
src/system/: log.cpp  log.h  timing.cpp  timing.h  window.cpp  window.h
src/utilities/: math_utilities.h  project_dependencies.h  safety_check.h  string_utilities.h  utilities.h
